# log-watchdog

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  settings.example.yml
.github/workflows/: rust.yml
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/fixtures/: invalid_settings.yml  valid_settings.yml
crates/settings/src/: lib.rs
local_dev/: docker-compose.yml  pgbouncer.ini
src/: lib.rs  main.rs
tests/: integration.rs
